      - maintainer-script-modifies-ld-so-conf
      - missing-dependency-on-install-info
      - multiple-distributions-in-changes-file
      - patch-system-but-no-source-readme
      - package-modifies-ld.so-search-path
      - possible-documentation-but-no-doc-base-registration
    + Removed:
      - file-in-usr-something-x11-without-pre-depends

  * checks/changelog-file.desc:
    + [RA] Document the "Old Changelog" way of marking historic changelog
      entries that shouldn't be syntax-checked in the long description for
      syntax-error-in-debian-changelog.  (Closes: #541119)
  * checks/debconf:
    + [CW] Permit Help: in .templates files, which is supported as of
      cdebconf 0.143 and used in the installer.
  * checks/debhelper{,.desc}:
    + [CW] Check for the use of debhelper override targets, which require
      debhelper 7.0.50.
    + [RA] Don't warn about recently deprecated debhelper commands in
      possibly optional portions of debian/rules.  (Closes: #537607)
    + [RA] Don't warn about missing build dependencies for commands in
      possibly optional portions of debian/rules.  (Closes: #537608)
  * checks/description:
    + [RA] Decode descriptions from UTF-8 before checking length.  Thanks,
      Charles Plessy.  (Closes: #537207)
  * checks/fields{,.desc}
    + [FL] packages named lib*-camlp4-dev should be in section ocaml
    + [RA] Move debian/rules parsing to check build dependencies to
      checks/rules.
    + [RA] Allow any package to be in section oldlibs without triggering
      warnings.  Thanks, Rene Engelhard.  (Closes: #537606)
    + [RA] Lower wrong-section-according-to-package-name to possible.
    + [RA] Recognize packages as metapackages even if they contain Lintian
      overrides, thus fixing two packages that added a Lintian override
      for having dependencies only permitted for metapackages, which in
      turn ensures that they keep getting that tag.