@@ -1,0 +1,10 @@
+# Known metapackages.  A metapackage is a package that exists for the
+# convenience of users or installers to install a set of related packages
+# and should not be used as a dependency of anything other than another
+# metapackage.  It should not be used as a build dependency ever.
+
+x-window-system
+x-window-system-dev
+x-window-system-core
+xorg
+xorg-dev
