@@ -1,0 +1,1 @@
+some-file usr/share/lintian
