@@ -1,0 +1,7 @@
+Testname: fields-depends-general
+Sequence: 6000
+Version: 1.0
+Description: General tests for package dependencies
+Test-For:
+ build-depends-on-metapackage
+ depends-on-metapackage
